--- a/index/index.css
+++ b/index/index.css
@@ -5,14 +5,15 @@ body{
 #app{
     background-color: #f5f5f5;
 }
-.section{
+.main{
     width: 730px;
+
 }
 .aside{
     width: 205px;
-    background-color: #c20c0c
+    padding: 10px;
 }
-.main{
+.main-wrap{
     display: flex;
     justify-content: center;
 }
@@ -25,6 +26,7 @@ body{
 .nav-content{
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 .nav-logo{
     font-size: 24px;
@@ -45,6 +47,31 @@ body{
     border-bottom: 3px solid #c20c0c!important;
     background-color: rgb(41, 41, 41)!important;
 }
+.search{
+    color: white!important;
+    width: 200px;
+    margin-left: 30px;
+}
+.search input{
+    border-radius: 20px;
+
+}
+.search input:focus{
+    border-color: transparent;
+
+}
+.log{
+    margin: 0 10px 0 10px;
+}
+.log>a{
+    color: #787878;
+    text-decoration: none;
+}
+.log>a:hover{
+    color: #666;
+    text-decoration: underline;
+}
+
 /* ----------------------- tab ---------------------- */
 .tab{
     display: flex;
@@ -76,14 +103,19 @@ body{
     height: 336px;
 }
 /* ----------------------- hot-playlist ---------------------- */
-.hot-playlist-content{
+.hot-title>h2{
+    border-bottom: 2px solid #c20c0c;
+    padding: 10px 0;
+    margin-right: 20px;
+}
+.hot-content{
     display: flex;
     flex-wrap: wrap;
 }
 .playlist-item{
     width: 160px;
-
-    margin: 0 10px 0 10px;
+    height: 227px;
+    margin: 0 10px 20px 10px;
 }
 .item-time{
     font-size: 13px;
@@ -106,4 +138,30 @@ body{
 }
 .btn-list{
     padding:5px 0 0 0 ;
+}
+/* ----------------------- hot-albumlist ---------------------- */
+.albumlist-item-img{
+    height: 100px;
+    width: 100px;
+}
+.album-after-img{
+    margin-left: -5px;
+    height: 100px;
+    width: 16px;
+}
+.albumlist-item{
+    width: 140px;
+    height: 200px;
+    margin: 0 5px 10px 0 ;
+}
+.item-title{
+
+}
+.item-singer{
+
+}
+/* ----------------------- aside ---------------------- */
+.hot-singer{
+    padding: 0 5px;
+    border-left: 1px solid #d3d3d3;
 }
