--- a/index/index.css
+++ b/index/index.css
@@ -3,7 +3,7 @@ body{
     margin: 0;
 }
 #app{
-    background-color: #f5f5f5;
+    background-color: white;
 }
 .main{
     width: 730px;
@@ -162,6 +162,52 @@ body{
 }
 /* ----------------------- aside ---------------------- */
 .hot-singer{
-    padding: 0 5px;
+    padding: 0 10px;
     border-left: 1px solid #d3d3d3;
+    margin: 0 0 60px 0;
+}
+/* ----------------------- singer ---------------------- */
+.singer-item{
+    display: flex;
+    align-items: flex-start;
+    height: 64px;
+    margin:5px 10px 5px 0;
+
+
+}
+.singer-item:hover{
+    border-right:4px solid #c20c0c;
+}
+.singer-img{
+    display: inline-block;
+}
+.singer-info-wrap{
+    display: inline-block;
+    padding: 0 5px;
+    height: 62px;
+
+}
+
+.singer-name{
+    font-size: 14px
+
+}
+.singer-info{
+    color: #666;
+    font-size: 12px;
+    padding: 5px 0 0 0;
+}
+/* ----------------------- singer ---------------------- */
+.footer{
+    color: #999;
+    margin:80px 300px 30px 300px ;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    border-top: 1px solid #d3d3d3;
+}
+
+.footer-link{
+    margin: 20px 0 10px 0;
+
 }
