搜索页面大致完成

--- a/index/index.css
+++ b/index/index.css
@@ -194,7 +194,7 @@ body{
     font-size: 12px;
     padding: 5px 0 0 0;
 }
-/* ----------------------- singer ---------------------- */
+/* ----------------------- footer ---------------------- */
 .footer{
     color: #999;
     margin:80px 250px 30px 250px ;
