--- a/searchResults/searchResults.css
+++ b/searchResults/searchResults.css
@@ -24,6 +24,11 @@ a:hover{
     text-decoration: underline;
 }
 /* ----------------------- search ---------------------- */
+.s-num{
+    font-size: 12px;
+    color: #999;
+    padding: 0 0 20px 0;
+}
 .s-wrap{
     display:flex;
     justify-content: center;
