--- a/detail/detail.css
+++ b/detail/detail.css
@@ -23,6 +23,14 @@ body{
 .section{
     display: flex;
 }
+a{
+    text-decoration: none;
+    color: black;
+}
+a:hover{
+    color: #000;
+    text-decoration: underline;
+}
 /* ----------------------- playlist ---------------------- */
 
 .playlist-time{
