--- a/index/index.css
+++ b/index/index.css
@@ -17,6 +17,14 @@ body{
     display: flex;
     justify-content: center;
 }
+a{
+    text-decoration: none;
+    color: black;
+}
+a:hover{
+    color: #000;
+    text-decoration: underline;
+}
 
 /* ----------------------- nav ---------------------- */
 .nav{
